--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,7 +1,30 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/service_container.html
+parameters:
+  login_listener.class:
+    AppBundle\EventListener\FosUserRegListener
+  fb_login_listener.class:
+    AppBundle\EventListener\FacebookFirstIpListener
+
 services:
     app.form.registration:
         class: AppBundle\Form\RegistrationFormType
         tags:
             - { name: form.type, alias: app_user_registration }
+    login_listener:
+        # path of the previously created class
+        class:  AppBundle\EventListener\SecurityListener
+        arguments:
+            userManager: "@fos_user.user_manager"
+        tags:
+            - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
+
+    user_login_store_ip_listener:
+      class:     %login_listener.class%
+      tags:
+          - { name: kernel.event_subscriber }
+
+    user_fb_login_store_ip_listener:
+      class:     %fb_login_listener.class%
+      tags:
+          - { name: kernel.event_subscriber }
