--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,7 +26,7 @@ security:
                     facebook:      /login/check-facebook
                 login_path:        /login
                 failure_path:      /login
-                default_target_path: /welcome
+                default_target_path: /dashboard
                 oauth_user_provider:
                     service:  my.custom.user_provider #my.custom.user_provider #- loads users from a database #
             form_login:
@@ -35,7 +35,7 @@ security:
                 login_path: /login
                 check_path: /login_check
                 always_use_default_target_path: false
-                default_target_path: /welcome
+                default_target_path: /dashboard
 
             logout:
                 path: /logout
@@ -44,6 +44,8 @@ security:
 
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/dashboard, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/listu, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
